完成首页错误排查

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="utf-8">
     <link rel="icon" href="<%= BASE_URL %>pedestrian.jpg" sizes="16x16">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Pedestrian</title>
 
+  <script src="https://cdn.bootcdn.net/ajax/libs/highlight.js/11.2.0/highlight.min.js"></script>
+  <script src="https://cdn.bootcdn.net/ajax/libs/highlightjs-line-numbers.js/2.8.0/highlightjs-line-numbers.min.js"></script>
+  <script src="https://cdn.bootcdn.net/ajax/libs/clipboard.js/2.0.8/clipboard.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/qiniu-js/3.4.0/qiniu.min.js"></script>
     <style>
         body {
             margin: 0;
